Updated Projects Section with GitHub Repos

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
 
 
 
-
-	<section class="site-section" id="section-portfolio">
+    <section class="site-section" id="section-portfolio">
     <div class="container">
         <div class="row">
             <div class="section-heading text-center col-md-12">
@@ -72,107 +71,133 @@
             <ul>
                 <li class="active" data-filter="*">All</li>
                 <li data-filter=".academic">Academic</li>
-                <li data-filter=".research">Research</li
-                >
+                <li data-filter=".research">Research</li>
             </ul>
         </div>
 
         <div class="filters-content">
-            <div class="row grid">            
-                <!-- Academic Project 1 -->
-                <div class="single-portfolio col-sm-4 all academic">
-                    <div class="relative">
-                        <div class="thumb">
-                            <div class="overlay overlay-bg"></div>
-                            <img class="image img-fluid" src="images/p4.jpg" alt="">
-                        </div>
-                        <a href="images/p4.jpg" class="img-pop-up">  
-                            <div class="middle">
-                                <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                            </div>
-                        </a>                                
-                    </div> 
-                    <div class="p-inner">
-                        <h4>Project 1</h4>
-                        <div class="cat">Academic</div>
-                    </div>
-                </div>
+            <div class="row grid">
 
-                <!-- Academic Project 2 -->
+                <!-- AI Mini Problems -->
                 <div class="single-portfolio col-sm-4 all academic">
                     <div class="relative">
                         <div class="thumb">
                             <div class="overlay overlay-bg"></div>
-                            <img class="image img-fluid" src="images/p5.jpg" alt="">
+                            <img class="image img-fluid" src="images/ai_mini_problems.jpg" alt="AI Mini Problems">
                         </div>
-                        <a href="images/p5.jpg" class="img-pop-up">  
+                        <a href="https://github.com/Jal-E/AI-Mini-Problems" target="_blank">
                             <div class="middle">
-                                <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+                                <div class="text align-self-center d-flex">View Project</div>
                             </div>
                         </a>
-                    </div> 
+                    </div>
                     <div class="p-inner">
-                        <h4>Project 2</h4>
+                        <h4>AI Mini Problems</h4>
+                        <p>Classic AI problems solved with algorithms, including 4-in-a-Line, 8-Puzzle Solver, and N-Queen solutions.</p>
                         <div class="cat">Academic</div>
                     </div>
                 </div>
 
-                <!-- Academic Project 3 -->
-                <div class="single-portfolio col-sm-4 all academic">
-                    <div class="relative">
-                        <div class="thumb">
-                            <div class="overlay overlay-bg"></div>
-                            <img class="image img-fluid" src="images/p5.jpg" alt="">
-                        </div>
-                        <a href="images/p5.jpg" class="img-pop-up">  
-                            <div class="middle">
-                                <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-                            </div>
-                        </a>
-                    </div> 
-                    <div class="p-inner">
-                        <h4>Project 3</h4>
-                        <div class="cat">Academic</div>
-                    </div>
-                </div>
-
-                <!-- Research Project 1 -->
+                <!-- Autonomous Vehicle -->
                 <div class="single-portfolio col-sm-4 all research">
                     <div class="relative">
                         <div class="thumb">
                             <div class="overlay overlay-bg"></div>
-                            <img class="image img-fluid" src="images/p4.jpg" alt="">
+                            <img class="image img-fluid" src="images/autonomous_vehicle.jpg" alt="Autonomous Vehicle">
                         </div>
-                        <a href="images/p4.jpg" class="img-pop-up">  
+                        <a href="https://github.com/Jal-E/Autonomous-Vehicle" target="_blank">
                             <div class="middle">
-                                <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+                                <div class="text align-self-center d-flex">View Project</div>
                             </div>
-                        </a>                                
-                    </div> 
+                        </a>
+                    </div>
                     <div class="p-inner">
-                        <h4>Project 1</h4>
+                        <h4>Autonomous Vehicle</h4>
+                        <p>Developed road segmentation algorithms with Python and ROS2 for autonomous vehicle perception.</p>
                         <div class="cat">Research</div>
                     </div>
                 </div>
 
-                <!-- Research Project 2 -->
+                <!-- Viral Cascade Prediction -->
                 <div class="single-portfolio col-sm-4 all research">
                     <div class="relative">
                         <div class="thumb">
                             <div class="overlay overlay-bg"></div>
-                            <img class="image img-fluid" src="images/p5.jpg" alt="">
+                            <img class="image img-fluid" src="images/viral_cascade.jpg" alt="Viral Cascade Prediction">
                         </div>
-                        <a href="images/p5.jpg" class="img-pop-up">  
+                        <a href="https://github.com/Jal-E/Viral-Cascade-Prediction" target="_blank">
                             <div class="middle">
-                                <div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+                                <div class="text align-self-center d-flex">View Project</div>
                             </div>
                         </a>
-                    </div> 
+                    </div>
                     <div class="p-inner">
-                        <h4>Project 2</h4>
+                        <h4>Viral Cascade Prediction</h4>
+                        <p>Predicted viral trends online using deep learning, analyzing information dissemination patterns.</p>
                         <div class="cat">Research</div>
                     </div>
-                </div>                       
+                </div>
+
+                <!-- Obesity Classification -->
+                <div class="single-portfolio col-sm-4 all academic">
+                    <div class="relative">
+                        <div class="thumb">
+                            <div class="overlay overlay-bg"></div>
+                            <img class="image img-fluid" src="images/obesity_classification.jpg" alt="Obesity Classification">
+                        </div>
+                        <a href="https://github.com/Jal-E/ObesityClassification" target="_blank">
+                            <div class="middle">
+                                <div class="text align-self-center d-flex">View Project</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="p-inner">
+                        <h4>Obesity Classification</h4>
+                        <p>Implemented ML models to predict obesity levels based on key health and lifestyle features.</p>
+                        <div class="cat">Academic</div>
+                    </div>
+                </div>
+
+                <!-- KnowItAll App -->
+                <div class="single-portfolio col-sm-4 all academic">
+                    <div class="relative">
+                        <div class="thumb">
+                            <div class="overlay overlay-bg"></div>
+                            <img class="image img-fluid" src="images/knowitall_app.jpg" alt="KnowItAll App">
+                        </div>
+                        <a href="https://github.com/Jal-E/knowitall" target="_blank">
+                            <div class="middle">
+                                <div class="text align-self-center d-flex">View Project</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="p-inner">
+                        <h4>KnowItAll App</h4>
+                        <p>Ingredient scanning app for making informed dietary, religious, and health-conscious choices.</p>
+                        <div class="cat">Academic</div>
+                    </div>
+                </div>
+
+                <!-- Software Engineering Projects -->
+                <div class="single-portfolio col-sm-4 all academic">
+                    <div class="relative">
+                        <div class="thumb">
+                            <div class="overlay overlay-bg"></div>
+                            <img class="image img-fluid" src="images/software_projects.jpg" alt="Software Engineering Projects">
+                        </div>
+                        <a href="https://github.com/Jal-E/Software-Engineering-Projects" target="_blank">
+                            <div class="middle">
+                                <div class="text align-self-center d-flex">View Project</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="p-inner">
+                        <h4>Software Engineering Projects</h4>
+                        <p>Collection of projects demonstrating software development skills, design patterns, and methodologies.</p>
+                        <div class="cat">Academic</div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
