Updated Projects Section with GitHub Repos

--- a/index.html
+++ b/index.html
@@ -465,9 +465,9 @@
 					
 						<li>
 							<span class="text-uppercase">Address</span>
-							San Francisco, CA <br>
-							4th Floor8 Lower  <br>
-							San Francisco street, M1 50F
+							Fayetteville, AR <br>
+							40 West Village Lake Dr  <br>
+							apt 1
 						</li>
 						<li>
             				<span class="text-uppercase">
