--- a/index.html
+++ b/index.html
@@ -1,64 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Anjali Rai</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/flexslider.css">
-	<link rel="stylesheet" href="fonts/icomoon/style.css">
-
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="css/style.css">
-
-	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
-
-
+    <title>Anjali Rai</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
 </head>
 <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
 
+<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="#section-portfolio">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
+                <li class="nav-item"><a class="nav-link" href="#section-skills">Skills</a></li>
+                <li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-
-	<nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
-
-		<div class="container">
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-
-			<div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample09">
-				<ul class="navbar-nav">
-					<li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-portfolio">Projects</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
-					<li class="nav-item"><a class="nav-link" href="#section-footer">Socials</a></li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-
-
-
-	<section class="site-hero" style="background-image: url(images/image_1.jpg);" id="section-home" data-stellar-background-ratio="0.5">
-		<div class="container">
-			<div class="row intro-text align-items-center justify-content-center">
-				<div class="col-md-10 text-center pt-5">
-
-					<h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Anjali Rai</strong></h1>
-					<strong class="d-block text-white text-uppercase letter-spacing">and this is My Portfolio</strong>
-
-				</div>
-			</div>
-		</div>
-	</section> <!-- section -->
-
-
-
-
+<section class="site-hero" style="background-image: url(images/image_1.jpg);" id="section-home" data-stellar-background-ratio="0.5">
+    <div class="container">
+        <div class="row intro-text align-items-center justify-content-center">
+            <div class="col-md-10 text-center pt-5">
+                <h1 class="site-heading site-animate">Hello, I'm <strong class="d-block">Anjali Rai</strong></h1>
+                <strong class="d-block text-white text-uppercase letter-spacing">Welcome to My Portfolio</strong>
+            </div>
+        </div>
+    </div>
+</section> <!-- section -->
 
     <section class="site-section" id="section-portfolio">
     <div class="container">
@@ -203,6 +185,33 @@
     </div>
 </section>
 
+<!-- skills -->
+<section class="site-section" id="section-skills">
+    <div class="container">
+        <div class="section-heading text-center">
+            <h2>Technical <strong>Skills</strong></h2>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h4>Programming Languages</h4>
+                <ul>
+                    <li>Python</li>
+                    <li>Rust</li>
+                    <li>C++</li>
+                    <li>Java</li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <h4>Tools & Frameworks</h4>
+                <ul>
+                    <li>TensorFlow, PyTorch</li>
+                    <li>ROS2, Kubernetes</li>
+                    <li>Linux, Git</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 	
 	<section class="site-section " id="section-resume">
 		<div class="container">
