--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
 
 					<p>
 						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a>
+						<a href="rezume-master/Anjali_rai_Resume.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
+
+                        </a>
 					</p>
 				</div>
 			</div>
@@ -378,24 +380,21 @@
 				</div>
 
 				<div class="col-md-7 mb-5 mb-md-0">
-					<form action="" class="site-form">
-						<h3 class="mb-5">Get In Touch</h3>
-						<div class="form-group">
-							<input type="text" class="form-control px-3 py-4" placeholder="Your Name">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Email">
-						</div>
-						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Phone">
-						</div>
-						<div class="form-group mb-5">
-							<textarea class="form-control px-3 py-4"cols="30" rows="10" placeholder="Write a Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" class="btn btn-primary  px-4 py-3" value="Send Message">
-						</div>
-					</form>
+					<form action="https://formspree.io/f/myzyqvaz" method="POST" class="site-form">
+                    <h3 class="mb-5">Get In Touch</h3>
+                    <div class="form-group">
+                        <input type="text" class="form-control px-3 py-4" placeholder="Your Name" name="name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control px-3 py-4" placeholder="Your Email" name="email" required>
+                    </div>
+                    <div class="form-group mb-5">
+                        <textarea class="form-control px-3 py-4" cols="30" rows="10" placeholder="Write a Message" name="message" required></textarea>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary px-4 py-3">Send Message</button>
+                    </div>
+                </form>
 				</div>
 				<div class="col-md-5 pl-md-5">
 					<h3 class="mb-5">My Contact Details</h3>
