pushing technical skills

--- a/index.html
+++ b/index.html
@@ -186,32 +186,55 @@
 </section>
 
 <!-- skills -->
-<section class="site-section" id="section-skills">
+<section class="site-section" id="section-skills" style="background-color: #f8f9fa; padding: 50px 0;">
     <div class="container">
         <div class="section-heading text-center">
             <h2>Technical <strong>Skills</strong></h2>
+            <p class="text-muted">Explore my expertise in programming, tools, and frameworks.</p>
         </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h4>Programming Languages</h4>
-                <ul>
-                    <li>Python</li>
-                    <li>Rust</li>
-                    <li>C++</li>
-                    <li>Java</li>
-                </ul>
+        <div class="row mt-5">
+            <!-- Column 1: Programming Languages -->
+            <div class="col-md-4 text-center">
+                <div class="skill-category mb-4">
+                    <h4 class="text-primary"><strong>Programming Languages</strong></h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin: 10px 0; color: #444;">Python</li>
+                        <li style="margin: 10px 0; color: #444;">Rust</li>
+                        <li style="margin: 10px 0; color: #444;">C++</li>
+                        <li style="margin: 10px 0; color: #444;">Java</li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-6">
-                <h4>Tools & Frameworks</h4>
-                <ul>
-                    <li>TensorFlow, PyTorch</li>
-                    <li>ROS2, Kubernetes</li>
-                    <li>Linux, Git</li>
-                </ul>
+
+            <!-- Column 2: Tools -->
+            <div class="col-md-4 text-center">
+                <div class="skill-category mb-4">
+                    <h4 class="text-success"><strong>Tools & Frameworks</strong></h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin: 10px 0; color: #444;">TensorFlow</li>
+                        <li style="margin: 10px 0; color: #444;">PyTorch</li>
+                        <li style="margin: 10px 0; color: #444;">ROS2</li>
+                        <li style="margin: 10px 0; color: #444;">Kubernetes</li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Column 3: Dev Tools -->
+            <div class="col-md-4 text-center">
+                <div class="skill-category mb-4">
+                    <h4 class="text-danger"><strong>Development Tools</strong></h4>
+                    <ul style="list-style: none; padding: 0;">
+                        <li style="margin: 10px 0; color: #444;">Linux</li>
+                        <li style="margin: 10px 0; color: #444;">Git</li>
+                        <li style="margin: 10px 0; color: #444;">Docker</li>
+                        <li style="margin: 10px 0; color: #444;">PostgreSQL</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
 </section>
+
 	
 	<section class="site-section " id="section-resume">
 		<div class="container">
