pushing final draft

--- a/index.html
+++ b/index.html
@@ -186,48 +186,60 @@
 </section>
 
 <!-- skills -->
-<section class="site-section" id="section-skills" style="background-color: #f8f9fa; padding: 50px 0;">
+<section class="site-section pb-0" id="section-skills">
     <div class="container">
-        <div class="section-heading text-center">
-            <h2>Technical <strong>Skills</strong></h2>
-            <p class="text-muted">Explore my expertise in programming, tools, and frameworks.</p>
+        <div class="row mb-4">
+            <div class="col-md-12">
+                <div class="section-heading text-center">
+                    <h2>Technical <strong>Skills</strong></h2>
+                </div>
+            </div>
         </div>
-        <div class="row mt-5">
-            <!-- Column 1: Programming Languages -->
-            <div class="col-md-4 text-center">
-                <div class="skill-category mb-4">
-                    <h4 class="text-primary"><strong>Programming Languages</strong></h4>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin: 10px 0; color: #444;">Python</li>
-                        <li style="margin: 10px 0; color: #444;">Rust</li>
-                        <li style="margin: 10px 0; color: #444;">C++</li>
-                        <li style="margin: 10px 0; color: #444;">Java</li>
+        <div class="row">
+            <!-- Programming Languages -->
+            <div class="col-md-6 col-lg-4 text-center mb-5">
+                <div class="site-service-item site-animate" data-animate-effect="fadeIn">
+                    <span class="icon" style="color: #b8d8ba;"> <!-- Light green icon color -->
+                        <span class="icon-code"></span>
+                    </span>
+                    <h3 class="mb-4">Programming Languages</h3>
+                    <ul style="list-style: none; padding: 0; color: #d1d1d1;"> <!-- Light grey text -->
+                        <li style="margin: 10px 0;">Python</li>
+                        <li style="margin: 10px 0;">Rust</li>
+                        <li style="margin: 10px 0;">C++</li>
+                        <li style="margin: 10px 0;">Java</li>
                     </ul>
                 </div>
             </div>
 
-            <!-- Column 2: Tools -->
-            <div class="col-md-4 text-center">
-                <div class="skill-category mb-4">
-                    <h4 class="text-success"><strong>Tools & Frameworks</strong></h4>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin: 10px 0; color: #444;">TensorFlow</li>
-                        <li style="margin: 10px 0; color: #444;">PyTorch</li>
-                        <li style="margin: 10px 0; color: #444;">ROS2</li>
-                        <li style="margin: 10px 0; color: #444;">Kubernetes</li>
+            <!-- Tools & Frameworks -->
+            <div class="col-md-6 col-lg-4 text-center mb-5">
+                <div class="site-service-item site-animate" data-animate-effect="fadeIn">
+                    <span class="icon" style="color: #b8d8ba;"> <!-- Light green icon color -->
+                        <span class="icon-drive"></span>
+                    </span>
+                    <h3 class="mb-4">Tools & Frameworks</h3>
+                    <ul style="list-style: none; padding: 0; color: #d1d1d1;"> <!-- Light grey text -->
+                        <li style="margin: 10px 0;">TensorFlow</li>
+                        <li style="margin: 10px 0;">PyTorch</li>
+                        <li style="margin: 10px 0;">ROS2</li>
+                        <li style="margin: 10px 0;">Kubernetes</li>
                     </ul>
                 </div>
             </div>
 
-            <!-- Column 3: Dev Tools -->
-            <div class="col-md-4 text-center">
-                <div class="skill-category mb-4">
-                    <h4 class="text-danger"><strong>Development Tools</strong></h4>
-                    <ul style="list-style: none; padding: 0;">
-                        <li style="margin: 10px 0; color: #444;">Linux</li>
-                        <li style="margin: 10px 0; color: #444;">Git</li>
-                        <li style="margin: 10px 0; color: #444;">Docker</li>
-                        <li style="margin: 10px 0; color: #444;">PostgreSQL</li>
+            <!-- Development Tools -->
+            <div class="col-md-6 col-lg-4 text-center mb-5">
+                <div class="site-service-item site-animate" data-animate-effect="fadeIn">
+                    <span class="icon" style="color: #b8d8ba;"> <!-- Light green icon color -->
+                        <span class="icon-layers"></span>
+                    </span>
+                    <h3 class="mb-4">Development Tools</h3>
+                    <ul style="list-style: none; padding: 0; color: #d1d1d1;"> <!-- Light grey text -->
+                        <li style="margin: 10px 0;">Linux</li>
+                        <li style="margin: 10px 0;">Git</li>
+                        <li style="margin: 10px 0;">Docker</li>
+                        <li style="margin: 10px 0;">PostgreSQL</li>
                     </ul>
                 </div>
             </div>
@@ -344,7 +356,7 @@
 	</section>
 
 
-	<section class="site-section pb-0"  id="section-services">
+	<!-- <section class="site-section pb-0"  id="section-services">
 		<div class="container">
 
 			<div class="row mb-4">
@@ -392,7 +404,7 @@
 			</div>
 		</div>
 	</section>
-
+-->
 	<section class="site-section" id="section-contact">
 		<div class="container">
 			<div class="row">
