--- a/index.html
+++ b/index.html
@@ -415,16 +415,38 @@
 				</div>
 
 				<div class="col-md-7 mb-5 mb-md-0">
-					<form action="https://formspree.io/f/myzyqvaz" method="POST" class="site-form">
+                <form action="https://formspree.io/f/myzyqvaz" method="POST" class="site-form">
                     <h3 class="mb-5">Get In Touch</h3>
                     <div class="form-group">
-                        <input type="text" class="form-control px-3 py-4" placeholder="Your Name" name="name" required>
+                        <input 
+                            type="text" 
+                            class="form-control px-3 py-4" 
+                            style="color: #fff;" 
+                            placeholder="Your Name" 
+                            name="name" 
+                            required
+                        >
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control px-3 py-4" placeholder="Your Email" name="email" required>
+                        <input 
+                            type="email" 
+                            class="form-control px-3 py-4" 
+                            style="color: #fff;" 
+                            placeholder="Your Email" 
+                            name="email" 
+                            required
+                        >
                     </div>
                     <div class="form-group mb-5">
-                        <textarea class="form-control px-3 py-4" cols="30" rows="10" placeholder="Write a Message" name="message" required></textarea>
+                        <textarea 
+                            class="form-control px-3 py-4" 
+                            style="color: #fff;" 
+                            cols="30" 
+                            rows="10" 
+                            placeholder="Write a Message" 
+                            name="message" 
+                            required
+                        ></textarea>
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary px-4 py-3">Send Message</button>
