pushing final draft

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="relative">
                         <div class="thumb">
                             <div class="overlay overlay-bg"></div>
-                            <img class="image img-fluid" src="images/viral_cascade.jpg" alt="Viral Cascade Prediction">
+                            <img class="image img-fluid" src="images/viral_cascade.png" alt="Viral Cascade Prediction">
                         </div>
                         <a href="https://github.com/Jal-E/Viral-Cascade-Prediction" target="_blank">
                             <div class="middle">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="p-inner">
                         <h4>Viral Cascade Prediction</h4>
-                        <p>Predicted viral trends online using deep learning, analyzing information dissemination patterns.</p>
+                        <p>Predicting the virality of malicious threads in anonymous forums within the darknet with the help of advanced social network analysis and machine learning techniques. The goal is to identify early indicators of viral cascades, enabling proactive mitigation of harmful content.</p>
                         <div class="cat">Research</div>
                     </div>
                 </div>
