pushing final draft

--- a/index.html
+++ b/index.html
@@ -179,7 +179,25 @@
                         <div class="cat">Academic</div>
                     </div>
                 </div>
-
+                <!-- Facial Expression Recognition -->
+                <div class="single-portfolio col-sm-4 all academic">
+                    <div class="relative">
+                        <div class="thumb">
+                            <div class="overlay overlay-bg"></div>
+                            <img class="image img-fluid" src="images/facial_recognition.jpg" alt="Facial Expression Recognition">
+                    </div>
+                    <a href="https://colab.research.google.com/drive/18pHhUchLH8nSfvUyymV-b_fVNdHxAKi1?usp=sharing" target="_blank">
+                        <div class="middle">
+                            <div class="text align-self-center d-flex">View Project</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="p-inner">
+                    <h4>Facial Expression Recognition</h4>
+                    <p>Built deep learning models using CNNs to classify facial expressions. Techniques include spatial feature extraction, data augmentation, and model training in PyTorch.</p>
+                <div class="cat">Research</div>
+                </div>
+            </div>
             </div>
         </div>
     </div>
@@ -261,14 +279,12 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> Aug 2023 - May 2025</span>
 						<h3>Masters in Computer Science</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
 						<span class="school">California State Polytechnic University Pomona</span>
 					</div>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> July 2014 - June 2018.</span>
+						<span class="date"><span class="icon-calendar"></span> July 2014 - June 2018</span>
 						<h3>Bachelors of Technology in Computer Science & Engineering</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
 						<span class="school">Sikkim Manipal Institute of Technology</span>
 					</div>
 
@@ -278,35 +294,35 @@
 
 					<h2 class="mb-5">Experience</h2>
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> January 2025 - Present</span>
-						<h3>Research Assistant(part-time)</h3>
-						<p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
-						<span class="school">Shopify</span>
-					</div>
-
-					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> May 2024 - December 2024</span>
 						<h3>Research Assistant(part-time)</h3>
-						<p>• Developing Camera-based road segmentation algorithms using ROS2 and Python.<br>
-						• Implemented real-time road, sidewalk detection systems and End to End behavioral learning.<br>
-						• Utilized Linux for development and deployment.</p>
+						<ul>
+                            <li><strong>Road Segmentation:</strong> Semantic segmentation using FCN and UNet architectures.</li>
+                            <li><strong>Behavioral Learning:</strong> End-to-end learning for driving commands.</li>
+                            <li><strong>Linux:</strong> Used for robotics development with ROS2.</li>
+                        </ul>
 						<span class="school">Autonomous Vehicle Lab, California State Polytechnic University Pomona</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> Febuary 2019 - May 2023</span>
 						<h3>Business Administrator</h3>
-						<p>• Managed sales, inventory, and worker disbursements.<br>
-						• Drove sales growth through strategic advertising and Data analysis</p>
+						<ul>
+                            <li><strong>Inventory Management:</strong> Applied EOQ and JIT systems to optimize stock levels.</li>
+                            <li><strong>Strategic Advertising:</strong> Identified target audiences for effective campaigns.</li>
+                        </ul>
 						<span class="school">Jay Hari Shiv Ganga Engineering</span>
 					</div>
 
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> January 2018 - June 2018</span>
 						<h3>Software Development Intern</h3>
-						<p>• Developed proficiency in Tcl scripting for project tasks.<br>
-						• Converted Tcl test scripts to Python for regression testing.<br>
-						• Collaborated with a team to deliver innovative solutions meeting project requirements.</p>
+						<ul>
+                            <li><strong>Scripting:</strong> Converted test scripts from Tcl to Python for automation.</li>
+                            <li><strong>Test Automation:</strong> Reduced human error and time with regression testing.</li>
+                            <li><strong> Python automation: </strong> Leveraged Python’s robust libraries for scalable test automation.
+                            </li>
+                        </ul>
 						<span class="school">Keysight Technologies</span>
 					</div>
 
@@ -469,7 +485,7 @@
 							<span class="text-uppercase">Address</span>
 							Fayetteville, AR <br>
 							40 West Village Lake Dr  <br>
-							apt 1
+							
 						</li>
 						<li>
             				<span class="text-uppercase">
