Updated the Experience section

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <div class="overlay overlay-bg"></div>
                             <img class="image img-fluid" src="images/obesity_classification.jpg" alt="Obesity Classification">
                         </div>
-                        <a href="https://github.com/Jal-E/ObesityClassification" target="_blank">
+                        <a href="https://github.com/Jal-E/ObeysityClassification" target="_blank">
                             <div class="middle">
                                 <div class="text align-self-center d-flex">View Project</div>
                             </div>
@@ -226,6 +226,7 @@
                         <li style="margin: 10px 0;">Rust</li>
                         <li style="margin: 10px 0;">C++</li>
                         <li style="margin: 10px 0;">Java</li>
+                        <li style="margin: 10px 0;">Javascript</li>
                     </ul>
                 </div>
             </div>
@@ -242,6 +243,7 @@
                         <li style="margin: 10px 0;">PyTorch</li>
                         <li style="margin: 10px 0;">ROS2</li>
                         <li style="margin: 10px 0;">Kubernetes</li>
+                        <li style="margin: 10px 0;">Jira</li>
                     </ul>
                 </div>
             </div>
@@ -258,6 +260,7 @@
                         <li style="margin: 10px 0;">Git</li>
                         <li style="margin: 10px 0;">Docker</li>
                         <li style="margin: 10px 0;">PostgreSQL</li>
+                        <li style="margin: 10px 0;">Agile Development</li>
                     </ul>
                 </div>
             </div>
@@ -293,6 +296,20 @@
 
 
 					<h2 class="mb-5">Experience</h2>
+
+                    <div class="resume-item mb-4">
+                        <span class="date"><span class="icon-calendar"></span> January 2025 - Present</span>
+                        <h3>Intern</h3>
+                        <ul>
+                            <li><strong>Agile Methodologies:</strong> Participating in sprint planning, standups, and retrospectives to support project development.</li>
+                            <li><strong>Technical Contributions:</strong> Developing and implementing technical solutions using coding and problem-solving skills.</li>
+                            <li><strong>Collaboration:</strong> Working across teams to execute strategic roadmaps and achieve business objectives.</li>
+                            <li><strong>Research:</strong> Conducting in-depth research to support digital transformation initiatives.</li>
+                            <li><strong>Project Demonstration:</strong> Presenting progress and deliverables during bi-weekly project reviews.</li>
+                        </ul>
+                        <span class="school">Quantum Pulse Consulting</span>
+                    </div>
+
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> May 2024 - December 2024</span>
 						<h3>Research Assistant(part-time)</h3>
@@ -334,42 +351,33 @@
 		</div>
 	</section> <!-- .section -->
 
-	<section class="site-section" id="section-about">
-		<div class="container">
-			<div class="row mb-5 align-items-center">
-				<div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-					<img src="images/image__1.jpg" alt="Image placeholder" class="img-fluid">
-				</div>
-				<div class="col-lg-5 pl-lg-5">
-					<div class="section-heading">
-						<h2>About <strong>Me</strong></h2>
-					</div>
-					<p class="lead">Hi there! I’m Anjali Rai, a curious soul on a mission to merge technology with creativity. When I’m not diving deep into AI models or debugging code, you’ll likely find me pursuing one of my ever-evolving passions (seriously, my toxic trait is that I can learn just about anything!).</p>
-					<p class="meta  ">🐾 Dog Lover: If there’s a dog in the room, I’m already best friends with it. My ultimate dream is to create a world where street dogs have homes and belly rubs galore.<br>
-
-					🧵 Aspiring Seamstress: Currently learning to sew so I can one day build a whole wardrobe by myself. The goal? Sustainable fashion, unique style, and the ability to say, “Thanks, I made it!” to every compliment. <br>
-
-					🤖 AI Cheerleader: I genuinely believe in the revolution AI will bring—making room for humanity to finally exhale, create, and explore the ART we’ve neglected in the rat race. (“We desperately need a new world philosopher!”)</p>
-
-					<p class="mb-lg-0"> ✨ Fun Facts: <br>
-
-					- I’ve studied for the UPSC exam in India, which means I can write essays on nearly any topic and have a unique perspective on life.<br>
-					- I’m obsessed with blending technology and social good, whether it’s using AI for disaster management or helping street dogs.<br>
-					- I can binge-learn a topic in record time—be it machine learning, cooking, or… sewing.<br> <br>
-					I’m here to create, inspire, and leave the world a little better than I found it. Let’s build something amazing together! </p>
-
-					<p>
-						<a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-						<a href="rezume-master/Anjali_rai_Resume.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
-
-                        </a>
-					</p>
-				</div>
-			</div>
-
-
-		</div>
-	</section>
+<section class="site-section" id="section-about">
+    <div class="container">
+        <div class="row mb-5 align-items-center">
+            <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
+                <img src="images/image__1.jpg" alt="Image placeholder" class="img-fluid">
+            </div>
+            <div class="col-lg-5 pl-lg-5">
+                <div class="section-heading">
+                    <h2>About <strong>Me</strong></h2>
+                </div>
+                <p class="lead">Hi there! I’m Anjali Rai, a curious soul on a mission to merge technology with creativity. Currently, I’m a Generalist Intern at <a href="https://qpulse.tech/" target="_blank">Quantum Pulse Consulting</a>, where I contribute to cutting-edge digital transformation initiatives using Agile methodologies and technical solutions.</p>
+                <p class="meta">🐾 Dog Lover: If there’s a dog in the room, I’m already best friends with it. My ultimate dream is to create a world where street dogs have homes and belly rubs galore.<br>
+                🧵 Aspiring Seamstress: Currently learning to sew so I can one day build a whole wardrobe by myself. The goal? Sustainable fashion, unique style, and the ability to say, “Thanks, I made it!” to every compliment. <br>
+                🤖 AI Enthusiast: I genuinely believe in the revolution AI will bring—making room for humanity to finally exhale, create, and explore the ART we’ve neglected in the rat race. (“We desperately need a new world philosopher!”)</p>
+                <p class="mb-lg-0">✨ Fun Facts: <br>
+                - I’ve studied for the UPSC exam in India, which means I can write essays on nearly any topic and have a unique perspective on life.<br>
+                - I’m obsessed with blending technology and social good, whether it’s using AI for disaster management or helping street dogs.<br>
+                - I can binge-learn a topic in record time—be it machine learning, cooking, or… sewing.<br> <br>
+                I’m here to create, inspire, and leave the world a little better than I found it. Let’s build something amazing together! <br> <br> </p>
+                <p>
+                    <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
+                    <a href="rezume-master/Anjali_rai_Resume.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 	<!-- <section class="site-section pb-0"  id="section-services">
