Updated Technical Skills, Professional Summary, and Skills Section

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
     </div>
 </section>
 
+
 <!-- skills -->
 <section class="site-section pb-0" id="section-skills">
     <div class="container">
@@ -226,7 +227,8 @@
                         <li style="margin: 10px 0;">Rust</li>
                         <li style="margin: 10px 0;">C++</li>
                         <li style="margin: 10px 0;">Java</li>
-                        <li style="margin: 10px 0;">Javascript</li>
+                        <li style="margin: 10px 0;">JavaScript</li>
+                        <li style="margin: 10px 0;">SQL</li> <!-- Added -->
                     </ul>
                 </div>
             </div>
@@ -241,9 +243,11 @@
                     <ul style="list-style: none; padding: 0; color: #d1d1d1;"> <!-- Light grey text -->
                         <li style="margin: 10px 0;">TensorFlow</li>
                         <li style="margin: 10px 0;">PyTorch</li>
+                        <li style="margin: 10px 0;">FastAPI</li> <!-- Added -->
                         <li style="margin: 10px 0;">ROS2</li>
                         <li style="margin: 10px 0;">Kubernetes</li>
-                        <li style="margin: 10px 0;">Jira</li>
+                        <li style="margin: 10px 0;">FAISS</li> <!-- Added -->
+                        <li style="margin: 10px 0;">SQLAlchemy</li> <!-- Added -->
                     </ul>
                 </div>
             </div>
@@ -261,12 +265,18 @@
                         <li style="margin: 10px 0;">Docker</li>
                         <li style="margin: 10px 0;">PostgreSQL</li>
                         <li style="margin: 10px 0;">Agile Development</li>
+                        <li style="margin: 10px 0;">Jira</li> <!-- Moved to Development Tools -->
                     </ul>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
+
+
+
+
 
 	
 	<section class="site-section " id="section-resume">
@@ -301,11 +311,11 @@
                         <span class="date"><span class="icon-calendar"></span> January 2025 - Present</span>
                         <h3>Intern</h3>
                         <ul>
-                            <li><strong>Agile Methodologies:</strong> Participating in sprint planning, standups, and retrospectives to support project development.</li>
-                            <li><strong>Technical Contributions:</strong> Developing and implementing technical solutions using coding and problem-solving skills.</li>
-                            <li><strong>Collaboration:</strong> Working across teams to execute strategic roadmaps and achieve business objectives.</li>
-                            <li><strong>Research:</strong> Conducting in-depth research to support digital transformation initiatives.</li>
-                            <li><strong>Project Demonstration:</strong> Presenting progress and deliverables during bi-weekly project reviews.</li>
+                            <li><strong>Backend Development:</strong> Working on RESTful APIs and database schemas for user and project management.</li>
+                            <li><strong>RAG Pipeline:</strong> Developing retrieval-augmented generation workflows for document search and query answering.</li>
+                            <li><strong>Agile Practices:</strong> Actively participating in sprint planning, daily standups, and retrospectives to support project goals.</li>
+                            <li><strong>Collaboration:</strong> Coordinating with teams to integrate backend functionalities with project requirements.</li>
+                            <li><strong>Project Demonstration:</strong> Preparing to present progress and deliverables during bi-weekly reviews to stakeholders.</li>
                         </ul>
                         <span class="school">Quantum Pulse Consulting</span>
                     </div>
@@ -372,7 +382,7 @@
                 I’m here to create, inspire, and leave the world a little better than I found it. Let’s build something amazing together! <br> <br> </p>
                 <p>
                     <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Hire Me</a>
-                    <a href="rezume-master/Anjali_rai_Resume.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
+                    <a href="rezume-master/Anjali_Rai_CV.pdf" class="btn btn-secondary px-4 py-2 btn-sm" download>Download CV</a>
                 </p>
             </div>
         </div>
